packages/portal-style/src/modules/_content-style.scss
/* ... */
.dp-po-post-content mark {
  background-color: var(--cyan20);
  color: var(--grey-darkest);
  padding: 3px;
  margin: -3px;
}

.dp-po-post-content .dp-colorify--blue {
  color: #4095cc;
}

.dp-po-post-content [data-align-left] {
  text-align: left;
  display: block;
}
.dp-po-post-content [data-align-left] img.centered {
  margin-left: 0;
}

.dp-po-post-content [data-align-center] {
  text-align: center;
  display: block;
}

.dp-po-post-content [data-align-right] {
  text-align: right;
  display: block;
}
.dp-po-post-content [data-align-right] img.centered {
  margin-right: 0;
}

.dp-po-post-content h1 {
  font-size: 22px;
  font-weight: bold;
}

.dp-po-post-content h2 {
  font-size: 18px;
  font-weight: bold;
}

.dp-po-post-content h3 {
  font-size: 16px;
  font-weight: bold;
}

.dp-po-post-content a {
  color: var(--brand-primary);
  text-decoration: none;
}

.dp-po-post-content a:hover {
  text-decoration: underline;
}

.dp-po-post-content blockquote {
  border-left: 2px solid var(--grey80);
  padding: 1px 0 1px 8px;
  margin: 16px 64px 16px 48px;
}
.dp-po-post-content blockquote blockquote {
  margin-top: 8px;
  margin-bottom: 0;
}
.dp-po-post-content blockquote p:first-child {
  margin-top: 8px;
}
.dp-po-post-content blockquote p:last-child,
.dp-po-post-content blockquote p:last-of-type {
  margin-bottom: 8px;
}
.dp-po-post-content hr {
  border-top: 1px solid var(--grey80);
  border-bottom: 0;
}
.dp-po-post-content ul {
  padding-inline-start: 32px;
}
.dp-po-post-content ul ol {
  counter-set: none;
  counter-reset: counter;
}
.dp-po-post-content ol ul {
  padding-inline-start: 35px;
}
.dp-po-post-content ul li::marker {
  margin-right: 8px;
}
.dp-po-post-content ul ul {
  padding-inline-start: 17px;
  list-style: disc;
}
.dp-po-post-content ol:not(.footnotes-list) {
  counter-reset: counter;
  padding-inline-start: 16px;
}
.dp-po-post-content ol:not(.footnotes-list) > li {
  display: flex;
  counter-increment: counter;
}
.dp-po-post-content ol:not(.footnotes-list) > div,
.dp-po-post-content ol:not(.footnotes-list) > p {
  width: 100%;
}
.dp-po-post-content ol:not(.footnotes-list) > li > p {
  display: inline-block;
  margin: 6px 0;
  max-width: calc(100% - 35px);
  vertical-align: middle;
}
.dp-po-post-content ol:not(.footnotes-list) p + p {
  margin-left: 27px;
}

.dp-po-post-content ol:not(.footnotes-list) ol:not(.footnotes-list) {
  padding-inline-start: 35px;
}
.dp-po-post-content ol:not(.footnotes-list) ol:not(.footnotes-list) ul,
.dp-po-post-content ol:not(.footnotes-list) ol:not(.footnotes-list) ol:not(.footnotes-list) {
  padding-inline-start: 38px;
}

.dp-po-post-content ol:not(.footnotes-list) > li:before {
  content: counters(counter, ".") " ";
  background-color: var(--grey10);
  border: 1px solid var(--grey20);
  border-radius: 100px;
  font-size: 14px;
  font-weight: 700;
  color: var(--grey-darkest);
  margin-right: 8px;
  min-width: 27px;
  display: inline-block;
  padding: 2px 2px 2px 3px;
  height: 27px;
  line-height: 21px;
  vertical-align: top;
  margin-top: 3px;
  text-align: center;
}
.dp-po-post-content ul ol:not(.footnotes-list) > li {
  counter-increment: ulCounter;
}
.dp-po-post-content ul ol:not(.footnotes-list) > li:before {
  content: counters(ulCounter, ".") " ";
}
.dp-po-post-content dt {
  font-weight: 600;
}
.dp-po-post-content dt code {
  font-weight: 400;
}
.dp-po-post-content dd {
  margin-inline-start: 10px;
  color: var(--grey80);
}
.dp-po-post-content dd + dt {
  margin-top: 20px;
}
.dp-po-post-content ul.contains-task-list {
  list-style: none;
  padding-inline-start: 0;
}
.dp-po-post-content ul.contains-task-list ul.contains-task-list {
  list-style: none;
  padding-inline-start: 33px;
}
.dp-po-post-content ul.contains-task-list .task-list-item {
  vertical-align: middle;
  margin-bottom: 10px;
}
.dp-po-post-content ul.contains-task-list .task-list-item .task-list-item {
  vertical-align: middle;
  margin-top: 10px;
  line-height: 150%;
}
.dp-po-post-content ul.contains-task-list .task-list-item-checkbox.checked::after {
  content: '';
  width: 12px;
  height: 8px;
  position: absolute;
  top: 3px;
  left: 3px;
  border: 2px solid var(--grey-darkest);
  border-top: none;
  border-right: none;
  transform: rotate(-45deg);
  box-sizing: border-box;
}
.dp-po-post-content .block {
  border: 1px solid var(--grey20);
  background-color: var(--grey3);
  border-radius: 5px;
  padding: 12px 16px 16px;
  margin-bottom: 16px;
}
.dp-po-post-content .block.callout {
  padding: 24px 9px 24px 24px;
}
.dp-po-post-content .block > :first-child {
  margin-top: 0;
}
.dp-po-post-content .block > :last-child {
  margin-bottom: 0;
}
.dp-po-post-content .block ol:not(.footnotes-list) {
  padding-inline-start: 0;
  counter-reset: block-counter;
}
.dp-po-post-content .block ol ol {
  padding-inline-start: 24px;
}
.dp-po-post-content .block ol li {
  counter-increment: block-counter;
}
.dp-po-post-content .block ol li:before {
  content: counters(block-counter, ".") " ";
}
.dp-po-post-content .block .block-title {
  background-color: var(--cyan20);
  font-weight: 500;
  height: 25px;
  margin-top: -12px;
  margin-left: -16px;
  margin-right: -16px;
  padding: 9px 16px;
  border-radius: 4px;
}
.dp-po-post-content .block .block-title + * {
  margin-top: 12px;
}
.dp-po-post-content .block .block-title:before {
  font-family: var(--font-awesome);
  font-weight: 900;
  margin-right: 12px;
  background-color: var(--cyan40);
  height: 24px;
  width: 24px;
  display: inline-block;
  text-align: center;
  border-radius: 100px;
  font-size: 12px;
}
.dp-po-post-content .block.error {
  border-color: var(--red100);
  border-left-width: 6px;
}
.dp-po-post-content .block.error .block-title {
  color: var(--red100);
  background-color: var(--red20);
}
.dp-po-post-content .block.error .block-title:before {
  content: '\f00d';
  background-color: var(--red40);
}
.dp-po-post-content .block.example {
  border-color: var(--purple100);
  border-left-width: 6px;
}
/* ... */

